# elementary-goal-tracker

./: .gitignore  goaltracker.in  io.elementary.goaltracker.yml  io.github.alexxisaapps.elementary_goal_tracker.yml  main.py  meson.build  pyproject.toml  quotes.json  reinstall.sh
data/: gresource.xml  io.elementary.goaltracker.desktop  io.elementary.goaltracker.metainfo.xml  io.github.alexxisaapps.elementary_goal_tracker.desktop  io.github.alexxisaapps.elementary_goal_tracker.metainfo.xml  meson.build  style.css
src/: __init__.py  application.py  config.py  goal_tracker.py  window.py
src/dialogs/: __init__.py  about_dialog.py  confirm_dialog.py  goal_dialog.py  list_dialog.py  settings_dialog.py
src/services/: __init__.py  daily_quote.py  list_manager.py  settings.py
src/widgets/: __init__.py  goal.py  step.py
